Fix padding at top of hero picture on mobile view

--- a/src/styles/_hero.scss
+++ b/src/styles/_hero.scss
@@ -19,3 +19,9 @@ $hero-picture-background-color: #ffffe4;
     }
   }
 }
+
+@include mobile {
+  .hero-body {
+    padding-top: 0.5em;
+  }
+}
